Add support for HSV

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@ $colors: map-merge($colors, $addColors);
 .webgl-gradient {
     width: 800px;
     height: 50px;
-    background-color: cyan;
+    background-color: black;
 }
 
 .webgl-graph {
